--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,8 @@ jobs:
         uses: actions/checkout@v4
       
       - uses: pnpm/action-setup@v4
+        with:
+          version: 9
 
       - name: Set up Node LTS
         uses: actions/setup-node@v4
