chore: update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@jx/rsimzo-client",
+  "name": "@jx_code/rsimzo-client",
   "version": "0.0.12",
   "type": "module",
   "repository": {
