--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "defu": "^6.1.4",
+    "destr": "^2.0.3",
     "ofetch": "^1.3.4",
     "vite-plugin-dts": "^3.9.1"
   }
