--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jx_code/rsimzo-client",
-  "version": "0.0.28",
+  "version": "0.0.29",
   "type": "module",
   "repository": {
     "type": "git",
@@ -9,13 +9,13 @@
   "files": [
     "dist"
   ],
-  "main": "./dist/rsimzo-client.umd.cjs",
-  "module": "./dist/rsimzo-client.js",
+  "main": "./dist/rsimzo-client.cjs.js",
+  "module": "./dist/rsimzo-client.es.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/rsimzo-client.js",
-      "require": "./dist/rsimzo-client.umd.cjs",
+      "import": "./dist/rsimzo-client.es.js",
+      "require": "./dist/rsimzo-client.cjs.js",
       "types": "./dist/index.d.ts"
     }
   },
@@ -27,14 +27,12 @@
   },
   "devDependencies": {
     "@types/node": "^20.14.11",
-    "@vitejs/plugin-vue": "^5.0.5",
-    "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "@vitejs/plugin-vue": "^5.1.4",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.10"
   },
   "dependencies": {
     "defu": "^6.1.4",
-    "destr": "^2.0.3",
-    "ofetch": "^1.3.4",
-    "vite-plugin-dts": "^3.9.1"
+    "vite-plugin-dts": "^4.3.0"
   }
 }
